--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>TEKLOGICA 2025</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
@@ -169,17 +169,7 @@
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
             >
-              About
-            </a>
-          </li>
-          <li>
-            <a
-              href="services.html"
-              class="li-a"
-              onmouseover="this.style.color='#FF69B4'"
-              onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
-            >
-              Join Party
+              Events
             </a>
           </li>
           <li>
