--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEKLOGICA 2025</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
@@ -147,7 +147,7 @@
       >
         <!-- Brand Name -->
         <li>
-          <a href="#" class="title" style="text-decoration: none"> TEKLOGICA 2024 </a>
+          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2024 </a>
         </li>
 
         <!-- Navigation Links -->
