--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
           0 0 12px rgba(57, 255, 20, 0.5);
       }
 
+      .text-a {
+        color: rgba(230, 230, 250, 1);
+        text-decoration: none;
+        padding: 5px 10px;
+        transition: color 0.3s;
+        text-shadow: 0 0 3px rgba(0, 191, 255, 0.5), 0 0 7px rgba(255, 20, 147, 0.5),
+          0 0 12px rgba(57, 255, 20, 0.5);
+      }
+
       .container {
         background-color: rgba(25, 25, 112, 0.5);
         border: 1px solid #461463;
@@ -190,7 +199,7 @@
       <div class="container text-center my-3">
         <div class="col-lg-10 col-md-8 mx-auto">
           <div class="title">St. Mira's College For Girls</div>
-          <div class="li-a">
+          <div class="text-a" style="font-size: small">
             (Autonomous - Affiliated to Savitribai Phule Pune University) <br />
             Re-Accredited by NAAC 'A' Grade (Third Cycle)
           </div>
