--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -212,7 +212,15 @@
           </div>
           <br />
           <div class="title-secondary">Computer Science Department Presents</div>
-          <div class="title-main my-3">TEKLOGICA 2024-2025</div>
+          <div class="title-main my-3">TEKLOGICA 2024-2025 <br /></div>
+          <marquee
+            class="title-secondary"
+            onmouseover="this.stop()"
+            onmouseout="this.start()"
+            style="width: 25rem"
+            >Date: 8th January'25 Time: 08 am to 03pm Venue:St. Mira's College Campus</marquee
+          >
+          <br />
           <img
             src="teck.png"
             class="img-hl"
