--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             class="title-secondary"
             onmouseover="this.stop()"
             onmouseout="this.start()"
-            style="width: 25rem"
+            style="width: 25rem; overflow: hidden"
             >Date: 8th January'25 Time: 08 am to 03pm Venue:St. Mira's College Campus</marquee
           >
           <br />
