--- a/index.html
+++ b/index.html
@@ -203,13 +203,18 @@
           <br />
           <div class="title-secondary">Computer Science Department Presents</div>
           <div class="title-main my-3">TEKLOGICA 2024-2025 <br /></div>
-          <marquee
-            class="title-secondary"
-            onmouseover="this.stop()"
-            onmouseout="this.start()"
-            style="width: 25rem;overflow: hidden; margin: 0 auto; position: relative"
-            >Date: 8th January'25 Time: 08 am to 03pm Venue:St. Mira's College Campus</marquee
+           <div
+            class="marquee-container"
+            style="width: 25rem; overflow: hidden; margin: 0 auto; position: relative"
           >
+            <marquee
+              class="title-secondary"
+              onmouseover="this.stop()"
+              onmouseout="this.start()"
+              style="width: 100%"
+              >Date: 8th January'25 Time: 08 am to 03pm Venue:St. Mira's College Campus</marquee
+            >
+          </div>
           <br />
           <img
             src="teck.png"
