--- a/event.html
+++ b/event.html
@@ -72,18 +72,18 @@
 
     <div class="container text-center my-3">
       <!-- Centered container -->
-      <div class="row row-cols-2 g-3">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
         <!-- 2 columns per row -->
 
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span>
-                Mouse over me 1 <br /><br />
+              <span class="para">
+                Electronics Projects <br />
                 <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text">
+              <div class="dropdown-text para1">
                 <p>
                   We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
                   Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
@@ -96,12 +96,13 @@
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span
-                >Mouse over me 2 <br /><br />
+              <span class="para"
+                >Computer Science Projects
+                <br />
                 <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text">
+              <div class="dropdown-text para1">
                 <p>
                   We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
                   Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
@@ -114,12 +115,13 @@
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span
-                >Mouse over me 3 <br /><br />
+              <span class="para"
+                >Code Sprint
+                <br />
                 <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text">
+              <div class="dropdown-text para1">
                 <p>
                   We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
                   Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
@@ -132,12 +134,13 @@
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span
-                >Mouse over me 4 <br /><br />
+              <span class="para"
+                >Non Technical Events
+                <br />
                 <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text">
+              <div class="dropdown-text para1">
                 <p>
                   We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
                   Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
@@ -148,6 +151,32 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer mt-2 py-1 text-center">
+      <div style="background: rgba(25, 25, 112, 0.5); color: white; padding: 20px; border-radius: 8px">
+        <div>
+          <p style="margin: 0; font-size: 1.2rem; font-weight: bold">Contact Us:</p>
+          <p style="margin: 5px 0; font-size: 1rem">
+            Email:
+            <a
+              href="mailto:teklogica25@stmira.edu"
+              class="text-light"
+              onmouseover="this.style.color='#FF69B4'"
+              onmouseout="this.style.color='white'"
+              >teklogica25@stmira.edu</a
+            >
+            | Phone:
+            <a
+              href="tel:+919028808800"
+              class="text-light"
+              onmouseover="this.style.color='#FF69B4'"
+              onmouseout="this.style.color='white'"
+              >+91 9028808800</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
