--- a/index.html
+++ b/index.html
@@ -66,16 +66,6 @@
               Events
             </a>
           </li>
-          <li>
-            <a
-              href="contact.html"
-              class="li-a"
-              onmouseover="this.style.color='#FF69B4'"
-              onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
-            >
-              Contact
-            </a>
-          </li>
         </div>
       </ul>
     </nav>
@@ -113,7 +103,7 @@
           <br />
           <br />
           <img src="teck.png" style="width: 20rem; height: 20rem; opacity: 80%" /><br /><br />
-          <p class="para" id="first">
+          <p class="para1" id="first">
             <i
               ><b>
                 We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the Computer
@@ -128,9 +118,37 @@
               </b></i
             >
           </p>
+
+          <div></div>
         </div>
       </div>
     </div>
+
+    <footer class="footer mt-2 py-1 text-center">
+      <div style="background: rgba(25, 25, 112, 0.5); color: white; padding: 20px; border-radius: 8px">
+        <div>
+          <p style="margin: 0; font-size: 1.2rem; font-weight: bold">Contact Us:</p>
+          <p style="margin: 5px 0; font-size: 1rem">
+            Email:
+            <a
+              href="mailto:teklogica25@stmira.edu"
+              class="text-light"
+              onmouseover="this.style.color='#FF69B4'"
+              onmouseout="this.style.color='white'"
+              >teklogica25@stmira.edu</a
+            >
+            | Phone:
+            <a
+              href="tel:+919028808800"
+              class="text-light"
+              onmouseover="this.style.color='#FF69B4'"
+              onmouseout="this.style.color='white'"
+              >+91 9028808800</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
