--- a/event.html
+++ b/event.html
@@ -75,76 +75,195 @@
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <!-- 2 columns per row -->
 
+        <!-- MATHEMATICCS POSTER DESCRIPTION-->
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span class="para">
-                Electronics Projects <br />
+              <span class="para blue-p">
+                Mathematics Posters <br /><br />
+                <img src="maths.png" style="width: 15rem; height: 15rem; opacity: 80%" />
+                <br />
+              </span>
+              <div class="dropdown-text para1 blue-m">
+                <h5><u>TOPICS</u></h5>
+                <br />
+                <ol style="text-align: left">
+                  <li>
+                    <h6><b>Cryptography: The Math Behind Secure Communication</b></h6>
+                    <ul type="none">
+                      <li>
+                        Exploring encryption techniques like RSA, AES, and the role of prime numbers in
+                        securing data.
+                      </li>
+                    </ul>
+                  </li>
+                  <br />
+                  <li>
+                    <h6>Linear Algebra in Computer Graphics and AI</h6>
+                    <ul type="none">
+                      <li>
+                        Applications of matrices, vectors, and transformations in machine learning and 3D
+                        rendering.
+                      </li>
+                    </ul>
+                  </li>
+                  <br />
+                  <li>
+                    <h6>Chaos Theory: The Butterfly Effect in Mathematics</h6>
+                    <ul type="none">
+                      <li>
+                        Understanding sensitive dependence on initial conditions and its role in
+                        simulations.
+                      </li>
+                    </ul>
+                  </li>
+                  <br />
+                  <li>
+                    <h6>Computational Geometry: Algorithms Behind Spatial Data</h6>
+                    <ul type="none">
+                      <li>Applications of geometric algorithms in robotics, GIS, and computer vision</li>
+                    </ul>
+                  </li>
+                  <br />
+                  <li>
+                    <h6>Boolean Algebra: The Foundation of Logic Circuits</h6>
+                    <ul type="none">
+                      <li>
+                        Visualizing truth tables, Karnaugh maps, and their role in digital systems.
+                      </li>
+                    </ul>
+                  </li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--ELECTRONICS POSTER DESCRIPTION-->
+        <div class="col">
+          <div class="p-3 container-fluid">
+            <div class="dropdown">
+              <span class="para purple-p"
+                >Electronics Poster <br />
+                <br />
+                <img src="electronics.png" style="width: 18rem; height: 13rem; opacity: 80%" />
+                <br /><br />
+              </span>
+              <div class="dropdown-text para1 purple-p">
+                <h5><u>TOPICS</u></h5>
+                <br />
+                <ol style="text-align: left">
+                  <li>
+                    <h6>
+                      <b
+                        >Advances in semiconductor technology : From Silicon to Gallium Nitride and
+                        willow</b
+                      >
+                    </h6>
+                  </li>
+                  <br />
+
+                  <li>
+                    <h6><b>Edge AI : Bringing intelligence to device level </b></h6>
+                  </li>
+                  <br />
+
+                  <li>
+                    <h6><b>Implantable Electronics : The future of health care </b></h6>
+                  </li>
+                  <br />
+
+                  <li>
+                    <h6><b>Cyber Security in IoT devices </b></h6>
+                  </li>
+                  <br />
+
+                  <li>
+                    <h6><b>Career in Electronics : Inspiring the next generation</b></h6>
+                  </li>
+                  <br />
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--COMPUTER SCIENCE EVENTS-->
+        <div class="col">
+          <div class="p-3 container-fluid">
+            <div class="dropdown">
+              <span class="para green-p"
+                >Computer Science Events
+                <br />
                 <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text para1">
+              <div class="dropdown-text para1 green-p">
+                <ol style="text-align: left">
+                  <li>
+                    <h6>Bug Bundy Content</h6>
+                    <ul type="none">
+                      <li>
+                        Participants are challenged to identify and resolve bugs and errors with
+                        precision and skill.
+                      </li>
+                    </ul>
+                  </li>
+                  <br />
+
+                  <li>
+                    <h6>Code Golf</h6>
+                    <ul type="none">
+                      <li>
+                        Write the shortest and most efficient code possible, focusing on minimizing the
+                        number of characters or lines while maintaining functionality and accuracy
+                      </li>
+                    </ul>
+                  </li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--STATISTICS POSTERS DESCRIPTIONS-->
+        <div class="col">
+          <div class="p-3 container-fluid">
+            <div class="dropdown">
+              <span class="para orange-p">
+                Statistics Posters <br /><br />
+                <img src="stats1.png" style="width: 19rem; height: 15rem; opacity: 80%" />
+                <br /><br />
+              </span>
+              <div class="dropdown-text para1 orange-p">
                 <p>
-                  We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
-                  Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
+                  AI revolutionizes data analytics by automating data processing, recognizing patterns,
+                  and providing predictive and prescriptive insights. It enhances decision-making through
+                  real-time analysis, anomaly detection, and personalized recommendations. AI also
+                  processes unstructured data, such as text and visuals, making analytics more versatile.
+                  Its scalability allows handling vast datasets efficiently, enabling businesses to
+                  innovate. Challenges include ensuring data quality, addressing bias, and making
+                  AI-driven insights interpretable
                 </p>
               </div>
             </div>
           </div>
         </div>
 
+        <!--NON TECHNICAL EVENTS-->
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span class="para"
-                >Computer Science Projects
+              <span class="para purple-p"
+                >Non Technical Games <br /><br />
+                <img src="chess.png" style="width: 18rem; height: 18rem; opacity: 80%" />
                 <br />
-                <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
-                <br /><br />
               </span>
-              <div class="dropdown-text para1">
-                <p>
-                  We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
-                  Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="p-3 container-fluid">
-            <div class="dropdown">
-              <span class="para"
-                >Code Sprint
-                <br />
-                <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
-                <br /><br />
-              </span>
-              <div class="dropdown-text para1">
-                <p>
-                  We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
-                  Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="p-3 container-fluid">
-            <div class="dropdown">
-              <span class="para"
-                >Non Technical Events
-                <br />
-                <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
-                <br /><br />
-              </span>
-              <div class="dropdown-text para1">
-                <p>
-                  We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the
-                  Computer Science Department of St. Mira's College for Girls, Pune, on 8th January 2025!
-                </p>
+              <div class="dropdown-text para1 purple-p">
+                <h4>Chess</h4>
+                <h4>Sudoko</h4>
+                <h4>Rubix cube</h4>
+                <h4>Stand Up Comedy</h4>
               </div>
             </div>
           </div>
