--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
               onmouseover="this.stop()"
               onmouseout="this.start()"
               style="width: 100%"
-              >Date: 8th January'25 Time: 08 am to 03pm Venue:St. Mira's College Campus</marquee
+              >Date:8th January'25 Time:08 am onwards Venue:St. Mira's College Campus</marquee
             >
           </div>
           <br />
           <br />
           <img src="teck.png" style="width: 20rem; height: 20rem; opacity: 80%" /><br /><br />
-          <p class="para1" id="first">
+          <p class="blue-p" id="first">
             <i
               ><b>
                 We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the Computer
