--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <br />
           <br />
           <img src="teck.png" style="width: 20rem; height: 20rem; opacity: 80%" /><br /><br />
-          <p class="blue-p" id="first">
+          <p class="para1 blue-p" id="first">
             <i
               ><b>
                 We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the Computer
