--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <br />
           <br />
           <img src="teck.png" style="width: 20rem; height: 20rem; opacity: 80%" /><br /><br />
-          <p class="title-secondary" id="first">
-            <i 
+          <p class="para1-b" id="first">
+            <i
               ><b>
                 We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the Computer
                 Science Department of St. Mira's College for Girls, Pune, on 8th January 2025. This event
