--- a/event.html
+++ b/event.html
@@ -71,6 +71,79 @@
     </nav>
 
     <div class="container text-center my-3">
+      <div class="container my-4">
+        <h2 class="text-center title-secondary">Event Schedule</h2>
+        <br />
+        <table
+          class="custom-table-class para1-b"
+          style="
+            background-color: rgba(0, 0, 0, 0.3); /* Transparent background */
+            color: white;
+            border-color: rgba(230, 230, 250, 0.5);
+          "
+        >
+          <tr>
+            <th>Activity</th>
+            <th>Time</th>
+            <th>Venue</th>
+          </tr>
+
+          <tr>
+            <td>Registration</td>
+            <td>8:30 am to 2:00 pm</td>
+            <td>Entrance</td>
+          </tr>
+          <tr>
+            <td>Inauguration</td>
+            <td>9:15 am to 9:30 am</td>
+            <td>AV Room (2<sup>nd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Computer Science Events</td>
+            <td>10:00 am to 11:00 am</td>
+            <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Mathematics Poster</td>
+            <td>11:00 am to 1:00 pm</td>
+            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Statistics Presentation</td>
+            <td>11:00 am to 1:00 pm</td>
+            <td>AV Room (2<sup>nd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Electronics Poster and Project</td>
+            <td>11:00 am to 1:00 pm</td>
+            <td>Electronics Lab (3<sup>rd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Computer Science Project</td>
+            <td>11:00 am to 1:00 pm</td>
+            <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Mathematics Aptitude</td>
+            <td>1:00 pm to 2:00 pm</td>
+            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
+          </tr>
+          <tr>
+            <td>Non-Technical Games</td>
+            <td>2:00 pm to 4:00 pm</td>
+            <td>AV Room (2<sup>nd</sup> Floor)</td>
+          </tr>
+        </table>
+        <br />
+        <p class="para1-b">
+          Kindly Note: The refreshment will be served from 11:00 am to 2:00 pm in Room No. 305 (3<sup
+            >rd</sup
+          >
+          Floor). Participants will be given 1 food coupon even after participating in one or more events
+          in the event.
+        </p>
+      </div>
+
       <!-- Centered container -->
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <!-- 2 columns per row -->
@@ -195,7 +268,7 @@
               <span class="para green-p"
                 >Computer Science Events
                 <br />
-                <img src="teck.png" style="width: 15rem; height: 15rem; opacity: 80%" />
+                <img src="cs.png" style="width: 17rem; height: 17rem; opacity: 80%" />
                 <br /><br />
               </span>
               <div class="dropdown-text para1 green-p">
@@ -236,6 +309,8 @@
                 <br /><br />
               </span>
               <div class="dropdown-text para1 orange-p">
+                <h6>Role of Artificial Intelligence in data analytics</h6>
+                <br />
                 <p>
                   AI revolutionizes data analytics by automating data processing, recognizing patterns,
                   and providing predictive and prescriptive insights. It enhances decision-making through
