--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               onmouseover="this.stop()"
               onmouseout="this.start()"
               style="width: 100%"
-              >Date:8th January'25 Time:08 am onwards Venue:St. Mira's College Campus</marquee
+              >Date:8th January'25 Time:8.30 am onwards Venue:St. Mira's College Campus</marquee
             >
           </div>
           <br />
@@ -108,13 +108,13 @@
               ><b>
                 We are excited to invite you to Teklogica 2024-25, a dynamic event hosted by the Computer
                 Science Department of St. Mira's College for Girls, Pune, on 8th January 2025. This event
-                promises a perfect blend of creativity, innovation, and fun, featuring activities such as
-                Computer Science Events, Mathematics Poster, Statistics Presentation, Electronics Poster
-                and Project, Computer Science Project, Mathematics Aptitude, and Non-Technical Games.
-                Teklogica is a celebration of technology and talent, designed to inspire, engage, and
-                showcase the skills of budding minds. Join us for an exciting and diverse day packed with
-                learning, competition, and entertainment.We look forward to your enthusiastic
-                participation!
+                promises a perfect blend of creativity, innovation, and fun, featuring various Technical
+                and Non-Technical Games. Teklogica is a celebration of technology and talent, designed to
+                inspire, engage, and showcase the skills of budding minds. Join us for an exciting and
+                diverse day packed with learning, competition, and entertainment.We look forward to your
+                enthusiastic participation! <br />
+                <br />
+                Check out Events Tab for more Information.
               </b></i
             >
           </p>
