--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <div style="display: flex; gap: 20px; font-family: 'Garamond', serif; font-size: 1.1rem">
           <li>
             <a
-              href="index.html"
+              href="time.html"
               class="li-a"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
             >
-              Home
+              Event Schedule
             </a>
           </li>
           <li>
@@ -63,7 +63,7 @@
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
             >
-              Events
+              Event Manual
             </a>
           </li>
         </div>
