--- a/event.html
+++ b/event.html
@@ -58,12 +58,12 @@
           </li>
           <li>
             <a
-              href="event.html"
+              href="time.html"
               class="li-a"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='rgba(230, 230, 250, 1)'"
             >
-              Events
+              Event Schedule
             </a>
           </li>
         </div>
@@ -71,79 +71,6 @@
     </nav>
 
     <div class="container text-center my-3">
-      <div class="container my-4">
-        <h2 class="text-center title-secondary">Event Schedule</h2>
-        <br />
-        <table
-          class="custom-table-class para1-b"
-          style="
-            background-color: rgba(0, 0, 0, 0.3); /* Transparent background */
-            color: white;
-            border-color: rgba(230, 230, 250, 0.5);
-          "
-        >
-          <tr>
-            <th>Activity</th>
-            <th>Time</th>
-            <th>Venue</th>
-          </tr>
-
-          <tr>
-            <td>Registration</td>
-            <td>8:30am - 2:00pm</td>
-            <td>Entrance</td>
-          </tr>
-          <tr>
-            <td>Inauguration</td>
-            <td>9:15am - 9:30am</td>
-            <td>AV Room (2<sup>nd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Computer Science Events</td>
-            <td>10:00am - 11:00am</td>
-            <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Mathematics Poster</td>
-            <td>11:00am - 1:00pm</td>
-            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Statistics Presentation</td>
-            <td>11:00am - 1:00pm</td>
-            <td>AV Room (2<sup>nd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Electronics Poster and Project</td>
-            <td>11:00am - 1:00pm</td>
-            <td>Electronics Lab (3<sup>rd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Computer Science Project</td>
-            <td>11:00am - 1:00pm</td>
-            <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Mathematics Aptitude</td>
-            <td>1:00pm - 2:00pm</td>
-            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
-          </tr>
-          <tr>
-            <td>Non-Technical Games</td>
-            <td>2:00pm - 4:00pm</td>
-            <td>AV Room (2<sup>nd</sup> Floor)</td>
-          </tr>
-        </table>
-        <br />
-        <p class="para1-b">
-          Kindly Note: The refreshment will be served from 11:00 am to 2:00 pm in Room No. 305 (3<sup
-            >rd</sup
-          >
-          Floor). Participants will be given 1 food coupon even after participating in one or more events
-          in the event.
-        </p>
-      </div>
-
       <!-- Centered container -->
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <!-- 2 columns per row -->
